kubernetes/apps/media/prowlarr/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-480p-com
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Prowlarr
    gethomepage.dev/pod-selector: app.kubernetes.io/name=prowlarr
    gethomepage.dev/icon: prowlarr.png
spec:
  hostnames:
    - prowlarr.480p.com
  parentRefs:
    - name: envoy-480p-com-public
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: prowlarr
          port: 80
