kubernetes/apps/media/prowlarr/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prowlarr-480p-com-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: prowlarr-480p-com
  extAuth:
    failOpen: false
    headersToExtAuth:
      - X-Forwarded-For
      - X-Forwarded-Host
      - X-Forwarded-Proto
      - X-Forwarded-Uri
      - accept
      - authorization
      - cookie
      - user-agent
    http:
      backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Location
        - Set-Cookie
        - X-authentik-email
        - X-authentik-groups
        - X-authentik-name
        - X-authentik-uid
        - X-authentik-username
